frontend/src/app/landing-page/landing-page.component.css
.landing-page {
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

form {
  width: 75%;
  max-width: 480px;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.form-item {
  width: 100%;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

